--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -18,37 +18,23 @@
           <li class="nav-item">
             <a class="nav-link d-flex align-items-center gap-2" href="#">
               <svg class="bi"><use xlink:href="#file-earmark"/></svg>
-              Orders
+              Despesas
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link d-flex align-items-center gap-2" href="#">
               <svg class="bi"><use xlink:href="#cart"/></svg>
-              Produtos
+                Receitas
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="#">
-              <svg class="bi"><use xlink:href="#people"/></svg>
-              Clientes
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="#">
-              <svg class="bi"><use xlink:href="#graph-up"/></svg>
-              Relatórios
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="#">
-              <svg class="bi"><use xlink:href="#puzzle"/></svg>
-              Integrações
-            </a>
-          </li>
+          
         </ul>
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
-          <span>Saved reports</span>
+          <span>
+            
+            Sumários
+          </span>
           <a class="link-secondary" href="#" aria-label="Add a new report">
             <svg class="bi"><use xlink:href="#plus-circle"/></svg>
           </a>
@@ -57,27 +43,16 @@
           <li class="nav-item">
             <a class="nav-link d-flex align-items-center gap-2" href="#">
               <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
-              Esse Mês 
+              Sumário das Despesas 
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link d-flex align-items-center gap-2" href="#">
               <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
-              Last quarter
+              Sumário das Receitas
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="#">
-              <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
-              Social engagement
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="#">
-              <svg class="bi"><use xlink:href="#file-earmark-text"/></svg>
-              Year-end sale
-            </a>
-          </li>
+          
         </ul>
 
         <hr class="my-3">
@@ -86,13 +61,13 @@
           <li class="nav-item">
             <a class="nav-link d-flex align-items-center gap-2" href="#">
               <svg class="bi"><use xlink:href="#gear-wide-connected"/></svg>
-              Settings
+              Configurações
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link d-flex align-items-center gap-2" href="#">
               <svg class="bi"><use xlink:href="#door-closed"/></svg>
-              Sign out
+                Sair
             </a>
           </li>
         </ul>
