--- a/templates/despesas/adicionar_despesa.html
+++ b/templates/despesas/adicionar_despesa.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
-<h1>Adcione despesas</h1>
 
-<ul class="list-group">
-<li> Bought Bear</li>
 
-</ul>
+{% block content%}
+<h1>Adicione despesas</h1>
+{%endblock%}
