--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -156,12 +156,17 @@
 <div class="container-fluid">
   <div class="row">
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+    <main role='main' class="d-flex">
       
-      {%block content %}
+        {%block content %}
 
       
       {%endblock%}
+      
+
+      </div>
+      
+      
     </main>
   </div>
 </div>
