--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -1,10 +1,54 @@
-{% extends 'base_auth.html' %}{%block content}
+{% extends 'base_auth.html' %}
+{%block content%}
 
 
 <div class="row">
-    <div class="col-md3"></div>
-    <div class="col-md3"></div>
-    <div class="col-md3"></div>
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+
+
+        <div class="card">
+            <div class="card-title">
+                <h4>Cadastre gratuitamente</h4>
+
+
+
+                <form action="" method="post">
+                    <div class="form-group">
+                        <input type="text" 
+                        name="user" 
+                        id="usernameField" 
+                        class="form-control form-control-sm">
+                    </div>
+                    <div class="form-group">
+                        <input 
+                        type="email" 
+                        name="email" 
+                        id="email" 
+                        class="form-control" 
+                        placeholder="email">
+                    </div>
+
+                    <div class="form-group">
+                        <input 
+                        type="password" 
+                        name="password" 
+                        id="passwordField" 
+                        class="form-control form-control-sm" 
+                        placeholder="Senha">
+
+                        <small class="float-right">SHOW</small>
+                    </div>
+                    <input type="submit" value="Register" class="btn btn-block">
+                </form>
+            </div>
+        </div>
+
+
+    </div>
+
+
+    <div class="col-md-3"></div>
 </div>
 
 
