--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -1,55 +1,39 @@
-{% extends 'base_auth.html' %}
+{% extends 'register-base.html' %}
+{% load static%}
 {%block content%}
+<form action="" method="post">
+    <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+    <h1 class="h3 mb-3 fw-normal">Cadastre-se</h1>
 
-
-<div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-6">
-
-
-        <div class="card">
-            <div class="card-title">
-                <h4>Cadastre gratuitamente</h4>
-
-
-
-                <form action="" method="post">
-                    <div class="form-group">
-                        <input type="text" 
+    <div class="form-floating">
+        <input type="text" 
                         name="user" 
                         id="usernameField" 
-                        class="form-control form-control-sm">
-                    </div>
-                    <div class="form-group">
-                        <input 
-                        type="email" 
-                        name="email" 
-                        id="email" 
-                        class="form-control" 
-                        placeholder="email">
-                    </div>
-
-                    <div class="form-group">
-                        <input 
-                        type="password" 
-                        name="password" 
-                        id="passwordField" 
-                        class="form-control form-control-sm" 
-                        placeholder="Senha">
-
-                        <small class="float-right">SHOW</small>
-                    </div>
-                    <input type="submit" value="Register" class="btn btn-block">
-                </form>
-            </div>
-        </div>
-
-
+                        class="form-control">
+        <label for="usernameField">Usuário</label>
+      </div>
+    <div class="form-floating">
+      <input type="email" class="form-control" id="emailField" placeholder="name@example.com">
+      <label for="emailField">Email</label>
+    </div>
+    <div class="form-floating">
+      <input type="password" class="form-control"  name="password" 
+      id="passwordField" placeholder="Senha" aria-label="senha">
+      <label for="passwordField">Senha</label>
     </div>
 
+    <div class="form-check text-start my-3">
+      <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+      <label class="form-check-label" for="flexCheckDefault">
+        Remember me
+      </label>
+    </div>
+    <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+    <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
+  </form>
 
-    <div class="col-md-3"></div>
-</div>
 
+<script src="{% static 'js/auhentication/register.js'%}"></script>
 
-{%endblock%}
+{%endblock content%}
+
