--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -13,8 +13,7 @@
                         class="form-control">
         <label for="usernameField">Usuário</label>
       </div>
-      <div class="invalid-feedback">
-        <p></p>
+      <div class="invalid_feedback" style="display: none;">
       </div>
     <div class="form-floating">
       <input type="email" class="form-control" id="emailField" placeholder="name@example.com">
