--- a/templates/register-base.html
+++ b/templates/register-base.html
@@ -2,7 +2,7 @@
 
 <!doctype html>
 <html lang="pt-br" data-bs-theme="auto">
-  <head><script src="{% static 'css/color-modes.css'%}"></script>
+  <head><script src="{% static 'js/color-modes.js'%}"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
-<link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" >
 <link rel="stylesheet" href="{% static 'css/base_auth.css'%}">
     <!-- Favicons -->
 <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
@@ -33,7 +33,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/sign-in.css'%}" rel="stylesheet">
+    <link href="{% static 'css/sign-in.css' %}" rel="stylesheet">
   </head>
   <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -92,7 +92,7 @@
   {%block content %}
   {%endblock %}
 </main>
-<script src="{% static 'js/bootstrap.bundle.min.js' %}" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}" ></script>
 
     </body>
 </html>
